refactor: reorganize project directory structure and update paths
- Moved resource files (icons, manifests) to Assets/ directory.
- Separated core logic, configuration, and UI components into Core/, Config/, and UI/ directories.
- Updated project file (AshClicker.csproj) to reflect new file paths.
- Ignored *.DotSettings files in .gitignore for JetBrains Rider compatibility.
- Renamed files and adjusted namespaces to align with the new structure.

This restructuring improves modularity, readability, and maintainability of the project.

--- a/AshClicker.csproj
+++ b/AshClicker.csproj
@@ -8,15 +8,15 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationManifest>app.manifest</ApplicationManifest>
+    <ApplicationManifest>Assets/Config/app.manifest</ApplicationManifest>
     <StartupObject>AshClicker.Program</StartupObject>
-    <ApplicationIcon>12489.ico</ApplicationIcon>
+    <ApplicationIcon>Assets/Icons/logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Update="AshForm.cs">
+    <Compile Update="UI\Forms\AshForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Update="KeySelectionFrame.cs">
+    <Compile Update="UI\Forms\KeySelectionFrame.cs">
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
