--- a/AshClicker.csproj
+++ b/AshClicker.csproj
@@ -20,4 +20,7 @@
       <SubType>Form</SubType>
     </Compile>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include=".github\workflows\build.yml" />
+  </ItemGroup>
 </Project>
