--- a/AshClicker.csproj
+++ b/AshClicker.csproj
@@ -13,6 +13,11 @@
     <ApplicationIcon>Assets/Icons/logo.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Update="UI\Forms\AshForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -22,5 +27,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include=".github\workflows\build.yml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Assets\Dll\interception.dll" />
+    <EmbeddedResource Include="Assets\Dll\interception.dll" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
