fix: resolve build issues and improve user experience
- Updated .github/workflows/build.yml to simplify the dotnet publish command, removing unnecessary options to prevent errors and streamline the process.
- Added Costura.Fody dependency in AshClicker.csproj for single-file executable generation, ensuring embedded dependencies for improved portability.
- Introduced FodyWeavers.xml for Costura configuration to enhance build automation and prevent runtime issues.
- Refactored foreach loop in AshForm.cs to a for loop due to compatibility issues with Fody.

This patch addresses build errors and enhances usability while maintaining compatibility and improving code reliability.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
         run: dotnet build --configuration Release
 
       - name: 发布应用程序
-        run: dotnet publish -c Release -o publish -p:PublishSingleFile=true --self-contained false
+        run: dotnet publish -c Release -o publish
 
       - name: 重命名文件
         run: |
